[tool.poetry]
name = "csv2md"
version = "0.1.0"
description = "Command-line tool for wiki engine."
authors = ["Andy Jones <3579815+wandering-andy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wandering-andy/csv2md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
mdutils = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
